# Imprimer

./: .env.example  .gitignore  README.md  docker-compose.yml  go.mod  go.sum  main.py  pyproject.toml
.github/workflows/: ci.yaml  sync_to_hf.yaml
demo/: README.md  app.py
deployments/: .env.example
docs/: cli-imprimer.md  roadmap.md
engine/: Dockerfile  imprimer_pb2.py  imprimer_pb2_grpc.py  main.py  requirements.txt
engine/core/analyzer/: stability.py
engine/core/chains/: prompt_chain.py
engine/core/evaluator/: embedder.py  judge.py  judger.py  scorer.py
engine/core/optimize/: bayes_search.py
engine/core/optimizer/: bayesian_search.py  graph.py  grpo.py  nodes.py  rpe.py  state.py
engine/core/registry/: prompt_store.py
engine/observability/: tracer.py
gateway/: Dockerfile
gateway/cmd/: main.go
gateway/cmd/imprimer/: main.go
gateway/internal/cli/: best.go  client.go  evaluate.go  optimize.go  root.go  utils.go
gateway/internal/client/: python_client.go
gateway/internal/handler/: analyze.go  best.go  optimize.go  prompt.go
gateway/internal/httpx/: json.go
gateway/internal/ui/: panel.go  styles.go
proto/: imprimer.proto
tests/: test_hf_integration.py
